fixed links for TAGS

--- a/conferences/TAGS24/index.html
+++ b/conferences/TAGS24/index.html
@@ -73,7 +73,7 @@
 <!----------------------------------------------------------------------------------------------------->
 <hr>
 <!----------------------------------------------------------------------------------------------------->
-<b><a href="https://forms.gle/ZcFeCGx92Tsve4Nd8"></a>Registration</b>: <font color=red>coming soon</font><br>
+<b><a href="https://docs.google.com/forms/d/e/1FAIpQLSeMhzQd98pwn7irgiobTw0N9eSFMovc9oXRZ7ijFKPrMztfDw/viewform">Registration</a></b><br>
 
 <b><a href="posters.html"></a>Poster Session:  </b> There will be a poster session for participants,
      with a prize for the best poster by a student or postdoc.<br>
@@ -92,7 +92,7 @@ early-career participants. Request this with your registration. <br>
 <b>Schedule:  </b>
 While the precise schedule has not yet been determined, the following is known:<br>
 The meeting starts on April 5 after the Second Maxson Lecture, which will be delivered by David Eisenbud from 4&ndash;5 PM.<br>
-There will be one or two talks, and a catered dinner thsat evening.<br>
+There will be one or two talks, and a catered dinner that evening.<br>
 On Saturday, there will be several lectures, a poster session, and a conference dinner, <br>
 and the conference will continue through early afternoon on Sunday, likely finishing by 1 PM.
 
@@ -104,22 +104,12 @@ Chiara Damiolini and Bernd Siebert (UT Austin),
 Anthony V&aacute;rilly-Alvarado  and Brandon Levin (Rice University),
 Patricia Klein and Frank Sottile (Texas A&amp;M).<br>
 
-<!-- <b><a href="https://forms.gle/ZcFeCGx92Tsve4Nd8">Registration</a></b><br> -->
-
-<!--<b><a href="posters.html">Poster Session:</a>  </b> There will be a poster session for participants,
-     with a prize of $200 for the best poster by a student or postdoc.<br>  -->
-
-<!--<b>Funding:</b> This conference is supported by NSF grant DMS-1758574.
-We will have a limited amount of support available to cover travel expenses for graduate students and
-early-career participants. Request this with your registration. <br>   -->
-
-<!--<a href="local.html"><b>Local and Practical Information</b></a>    <br> -->
-
 
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
-TAGS 2024 is supported in part by NSF grant DMS-2349244, as well as the Department of Mathematics at Texas A&amp;M University.
+TAGS 2024 is supported in part by NSF grant DMS-2349244, as well as the Department of Mathematics and
+the College of Arts and Sciences at Texas A&amp;M University.
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
