--- a/teaching/24.1/Term_Paper_Topics.html
+++ b/teaching/24.1/Term_Paper_Topics.html
@@ -27,6 +27,15 @@
   <li>History of Linear Algebra</li><!-- Hunter Shepard -->
   <li>Mathematics and Airplanes</li><!-- Nikole Vernamonti -->
   <li>Mathematics of War</li><!-- Maxwell Cao -->
+  <li>The Development of the Calculus by Newton and Leibniz</li><!--Chris Roosa  -->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
 <!--  <li></li>-->
 <!--  <li></li>-->
 <!--  <li></li>-->
