--- a/teaching/24.1/weeks/W03.html
+++ b/teaching/24.1/weeks/W03.html
@@ -65,7 +65,7 @@
  <li><font color=maroon><b>Assignment:</b> Due Monday, February 5.</font> (HW 3)
   <font color=red>It is OK to discuss this among yourselves.  We all have something to learn from each other.</font><br>
    Here is a <a href="../HW/HW03.pdf">.pdf</a> and a  <a href="../HW/HW03.tex">LaTeX source</a> of the assignment, and 
-   the same a href="../HW/Group03.pdf">.pdf</a> and a  <a href="../HW/Group03.tex">LaTeX source</a> of the group assignment.<br>
+   the same <a href="../HW/Group03.pdf">.pdf</a> and a  <a href="../HW/Group03.tex">LaTeX source</a> of the group assignment.<br>
    The quiz (on Gradescope) is three exceptionally short questions with even shorter answers that you need to take after you have
   completed the reading.<br>
   <b><font color=maroon>Do not hand in (this is for your group to discuss):</font></b>  
@@ -211,7 +211,7 @@ pageTracker._trackPageview();
 } catch(err) {}</script>
 <!---------------------------------------------------------------------------->
 <!-- hhmts start Last modified: Wed Feb  5 07:51:40 CET 2020 --> <!-- hhmts end -->
-<p>Last modified: Tue Jan 30 21:05:41 GMT 2024 by sottile</p>
+<p>Last modified: Sat Feb 10 18:18:40 GMT 2024 by sottile</p>
 
 </body> </html>
 
