--- a/conferences/TAGS24/index.html
+++ b/conferences/TAGS24/index.html
@@ -60,9 +60,11 @@
   &nbsp;  <a href="https://math.berkeley.edu/people/faculty/hannah-k-larson">Hannah Larson</a>          &nbsp;
                  University of California at Berkeley  <br>
   &nbsp;  <a href="http://web.math.unifi.it/users/ottaviani/">Giorgio Ottaviani</a>     &nbsp;
-                 Universit&aacute; di Firenze <br>
-  &nbsp;  <a href="https://www.math.uni-sb.de/ag/schreyer">Frank Schreyer</a>    &nbsp;
+                 Universit&aacute; di Firenze 
+<!-- <br> &nbsp;  <a href="https://www.math.uni-sb.de/ag/schreyer">Frank Schreyer</a>    &nbsp;
                 Universit&auml;t des Saarlandes   <br>
+Frank cancelled his attendance on 11 February 2024
+-->
  
    </td>
   </tr>
