--- a/talks.html
+++ b/talks.html
@@ -117,10 +117,16 @@
  <B><FONT SIZE=+1 color=brown>Upcoming Talks</FONT></B>
  <ul>
 
+ </li>
+   <!---------------------------------------------------------------------------------------->
+     <FONT COLOR="AA00FF"><I>TBA</I></font>, <!-- quantum Murnaghan-Nakayama -->
+     Berleley Combinatorics Seminar, 17 April 2024.
+  <!---------------------------------------------------------------------------------------->
+  <li>
    <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry</I></font>,
-    Invited talks, <a href="https://sites.google.com/view/golden-section-2024/home">MAA Golden Section meeting</a>, University of
+    Invited talk, <a href="https://sites.google.com/view/golden-section-2024/home">MAA Golden Section meeting</a>, University of
     California, Santa Cruz, 24 February 2024.
     <a href="talks/24/Golden.txt">Abstract</a>. <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
   </li>
@@ -554,7 +560,7 @@
 
 <hr>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Fri Feb 09 05:36:33 GMT 2024 by sottile</p>  
+<p>Last modified: Sun Feb 11 07:07:30 GMT 2024 by sottile</p>  
 <!---------------------------------------------------------------------------->
 </body> </html>
 
