--- a/teaching/24.1/Term_Paper_Topics.html
+++ b/teaching/24.1/Term_Paper_Topics.html
@@ -28,8 +28,8 @@
   <li>Mathematics and Airplanes</li><!-- Nikole Vernamonti -->
   <li>Mathematics of War</li><!-- Maxwell Cao -->
   <li>The Development of the Calculus by Newton and Leibniz</li><!--Chris Roosa  -->
-<!--  <li></li>-->
-<!--  <li></li>-->
+  <li>The Four Color Theorem</li><!-- Anthony Gath -->
+  <li>Cantor's Theory of the Infinite</li><!-- Nicola Gonsalves -->
 <!--  <li></li>-->
 <!--  <li></li>-->
 <!--  <li></li>-->
