--- a/conferences.html
+++ b/conferences.html
@@ -106,59 +106,52 @@
 <B><FONT SIZE=+1 color=brown>Mark Your Calendar</FONT></B>
 
 <UL>
- <!---------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
   <li> AMS Special session on
     <a href="SanAntionio24/index.html"></a>Applications of Algebraic Geometry,
     <a href="http://www.ams.org/meetings/sectional/2319_program.html">AMS Central Section Meeting 14&ndash;15 September 2024</a>,
     University of Texas, San Antonio.
     Co-organizing with <a href="https://alpergur.xyz/">Alperen Ergur</a> and <a href="https://people.tamu.edu/~annejls/">Anne Shiu</a>.
  </li>
- <!---------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
  <li>
    <a href="https://www.mis.mpg.de/calendar/conferences/2024/mega.html">Effective Methods in Algebraic Geometry (MEGA), 29 July &ndash; 2
    August 2024, Leipzig</a>. 
    <a href="conferences/MEGA2024/MEGA2024_poster.pdf">poster</a> &nbsp; 
    <a href="conferences/MEGA2024/Call.txt">Call for Participation</a>.
  </li>
- <!---------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
  <li>
    Conference on
    <a href="http://www.fields.utoronto.ca/activities/23-24/enumerative-geometry">Computational and Applied  Enumerative Geometry</a>, 
    June 3&ndash;7 2024, Fields Institute, Toronto Ontario.
    <a href="conferences/Frank_24.pdf">poster</a>.
  </li>
- <!---------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
  <li>
    <a href="https://sites.google.com/a/wagsymposium.org/current/davis-spring-2024">WAGS</a>,
    UC Davis, 27 April &ndash; 28 April, 2024.
  </li>
- <!--------------------------------------------------------->
- <!--------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+
  <li>
    <a href="conferences/TAGS24/index.html">Texas Algebraic Geometry Symposium</a>,
    Texas A&amp;M University,
    5  &ndash; 7 April, 2024.<br>
    Supported by NSF grant DMS-2349244.
  </li>
- <!--------------------------------------------------------->
- <!--------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
  <li>
    <a href=" https://www.math.tamu.edu/conferences/combinatexas/">CombinaTexas</a>,
    Texas A&amp;M University,
    23  &ndash; 24 March, 2024.
  </li>
  <!--------------------------------------------------------->
- <!---------------------------------------------------------------------------------------------------->
- <li>
-   SIAM <a href="https://userweb.ucs.louisiana.edu/~C00424602/SIAMTXLA2023">TX&ndash;LA Meeting</a>,
-   November 3&ndash;5, 2023, at University of Louisiana, Lafayette.<br>
-   Minisymposium MS09: Computational nonlinear algebra.
-   <a href="conferences/TX-LA/index.html">Suite of related minisymposia</a>.
- </li>
- <!---------------------------------------------------------------------------------------------------->
 
 </UL>
 
@@ -172,18 +165,11 @@
 
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Sat Mar 18 09:34:04 CET 2023 <!-- hhmts end -->
-<!---------------------------------------------------------------------------->
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-12943815-1");
-pageTracker._trackPageview();
-} catch(err) {}</script>
-<!---------------------------------------------------------------------------->
+<!-- hhmts start Last modified: Sat Mar 18 09:34:04 CET 2023 <!-- hhmts end -->
+<!---------------------------------------------------------------------------------------------------->
+<p>Last modified: Wed Feb 14 15:46:10 GMT 2024 by sottile</p>  
+<!---------------------------------------------------------------------------------------------------->
+
 </body> </html>
 
  
