--- a/conferences/index.html
+++ b/conferences/index.html
@@ -15,8 +15,34 @@
 
 <UL>
  
- <!--------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+  <li> AMS Special session on
+    <a href="SanAntionio24/index.html"></a>Applications of Algebraic Geometry,
+    <a href="http://www.ams.org/meetings/sectional/2319_program.html">AMS Central Section Meeting 14&ndash;15 September 2024</a>,
+    University of Texas, San Antonio.
+    Co-organizing with <a href="https://alpergur.xyz/">Alperen Ergur</a> and <a href="https://people.tamu.edu/~annejls/">Anne Shiu</a>.
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <li>
+   <a href="https://www.mis.mpg.de/calendar/conferences/2024/mega.html">Effective Methods in Algebraic Geometry (MEGA), 29 July &ndash; 2
+   August 2024, Leipzig</a>. 
+   <a href="MEGA2024/MEGA2024_poster.pdf">poster</a> &nbsp; 
+   <a href="MEGA2024/Call.txt">Call for Participation</a>.
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
 
+ <li>
+   <a href="TAGS24/index.html">Texas Algebraic Geometry Symposium</a>,
+   Texas A&amp;M University,
+   5  &ndash; 7 April, 2024.<br>
+   Supported by NSF grant DMS-2349244.
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ 
+
+ 
 </ul>
 
 
@@ -25,7 +51,15 @@
 <!------------------------------------------------------------------------>
 <B><FONT SIZE=+1 color=brown>Past organizing</FONT></B>
 <UL>
- <!--------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <li>
+   SIAM <a href="https://userweb.ucs.louisiana.edu/~C00424602/SIAMTXLA2023">TX&ndash;LA Meeting</a>,
+   November 3&ndash;5, 2023, at University of Louisiana, Lafayette.<br>
+   Minisymposium MS09: Computational nonlinear algebra.
+   <a href="TX-LA/index.html">Suite of related minisymposia</a>.
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
  <li>
    Scientific committee, 
    Canadian Discrete and Algorithmic Mathematics <a href="http://www.canadam.ca">CanaDAM 2023</a>,
@@ -37,7 +71,7 @@
    Co-organized with <a href="https://www.math.lsu.edu/~shipman/">Stephen Shipman</a,
    ICERM Hot Topics Workshop on <a href="https://icerm.brown.edu/events/htw-23-agst/">Algebraic Geometry in Spectral Theory</a>,
    24&ndash;26 February 2023.<br>
-   <a href="conferences/ICERM23/index.html">Reading List</a>.
+   <a href="ICERM23/index.html">Reading List</a>.
  </li>
  <!--------------------------------------------------------->
  <!--------------------------------------------------------->
@@ -117,8 +151,8 @@
  <!--------------------------------------------------------->
  <!--------------------------------------------------------->
  <li> AMS Special session on
-   <a href="http://personal.cimat.mx:8181/~abraham.mc/conferences/AMS-Denv16/">Foundations of Numerical
-     Algebraic Geometry</a>, Fall 2016 AMS Western Section Meeting  8&mdash;9 October 2016, University of Denver, 
+   <a href="http://personal.cimat.mx:8181/~abraham.mc/conferences/AMS-Denv16/"></a>Foundations of Numerical
+     Algebraic Geometry, Fall 2016 AMS Western Section Meeting  8&mdash;9 October 2016, University of Denver, 
        Denver, CO. 
   </li>
  <!--------------------------------------------------------->
