--- a/teaching/24.1/Term_Paper_Topics.html
+++ b/teaching/24.1/Term_Paper_Topics.html
@@ -29,11 +29,11 @@
   <li>Mathematics of War</li><!-- Maxwell Cao -->
   <li>The Development of the Calculus by Newton and Leibniz</li><!--Chris Roosa  -->
   <li>The Four Color Theorem</li><!-- Anthony Gath -->
-  <li>Cantor's Theory of the Infinite</li><!-- Nicola Gonsalves -->
-<!--  <li></li>-->
-<!--  <li></li>-->
-<!--  <li></li>-->
-<!--  <li></li>-->
+  <li>Mathematical Paradoxes of Infiinity</li><!-- Nicola Gonsalves -->
+  <li>History of Mathematical notation</li><!-- Brad Check-->
+  <li>permutation groups in the development of abstract algebra</li><!--  Isaiah Galo -->
+  <li>Non-Euclidean geometry</li><!-- Jacob Selensky -->
+  <li>Matematics and the Lottery</li><!-- Nicholas Towers  -->
 <!--  <li></li>-->
 <!--  <li></li>-->
 <!--  <li></li>-->
