--- a/teaching/24.1/weeks/W05.html
+++ b/teaching/24.1/weeks/W05.html
@@ -107,15 +107,14 @@
     <li>Exercises 6.2.1, 6.2.2, and 6.2.3 from Stillwell.
       
     <li>Exercises 6.5.3 from Stillwell.   For 6.5.3, find the other two solutions (this will require reading my notes on cubics.)</li>
-    <li>Try to find the roots of the cubic: 4<i>x</i><sup>3</sup>+5<i>x</i>=3.</li>
-    <li><!---<i>x</i><sup>3</sup>=7<i>x</i>+6, 
+    <li>Try to find the roots of the cubic: 2<i>x</i><sup>3</sup> - 30<i>x</i><sup>2</sup> + 162<i>x</i> - 350 = 0.</li>
+    <!---<i>x</i><sup>3</sup>=7<i>x</i>+6, 
             Do not assign x^3=7x+6 again.  The next one is however, nice and easy.   Maybe need to find another easy one
      to replace the first one, x^3=7x+6.expand( (x-1)*(x^2+x+2)) = x^3+x=2; 
      Here is another cubic to solve completely: <i>x</i><sup>3</sup>+2<i>x</i>+4<i>i</i>=0,
     where <i>i</i> is the imaginary unit, a square root of -1.  You will find the example on the bottom of page 3 of my notes, as well as
     the formula (-<i>i</i>)<sup>3</sup>=<i>i</i>, useful for the second cubic.--->
-    </li> 
-    <li>Do the exercises 6.7.1, 6.7.2, and 6.7.3 in Stillwell.  These should be relatively short.</li>
+      <li>Do the exercises 6.7.1, 6.7.2, and 6.7.3 in Stillwell.  These should be relatively short.</li>
     
     <li>Cardano led an interesting life.  Look up some material on the web (two sources besides our book) and write something about his
            life, both mathematical and otherwise.  Probably two paragraphs, and try to include some story that is not in Stillwell's potted
@@ -135,7 +134,7 @@
 <address></address>
 <!---------------------------------------------------------------------------->
 <!-- hhmts start Last modified: Sun Feb  9 07:40:02 CET 2020 --><!-- hhmts end -->
- <p>Last modified: Sat Feb 10 18:19:14 GMT 2024 by sottile</p>
+ <p>Last modified: Thu Feb 15 15:37:00 GMT 2024 by sottile</p>
 
 </body> </html>
 
