--- a/teaching/24.1/weeks/W06.html
+++ b/teaching/24.1/weeks/W06.html
@@ -15,17 +15,18 @@
 <HR>
 <!-------------------------------------------------------------->
 
-<font color=maroon><h3>Week 6: 21 February 2022. </h3></font>
+<font color=maroon><h3>Week 6: 19 February 2024. </h3></font>
 <ul>
   <li><font color=maroon><B>Opening Remarks:</b></font>
 
-  &nbsp; &nbsp; Do begin to think about your <a href="../Second_paper.html">second paper</a>.  It is due in 4 weeks, and
-  you should decide what you will do, and perhaps start reading the text or sketch an outline.  The deadline will arrive
+  &nbsp; &nbsp; Do begin to think about the writing assignment
+  <a href="../ReflectionsOnHistoryOfMathematics.html">Reflections on thee History of Mathematics</a>.  It is due in 4.5 weeks, and
+  you should decide what you will do, and perhaps start sketching an outline.  The deadline will arrive
   sooner than you think.
   <br>
 
   &nbsp; &nbsp;
-  Our reading is on geometry in the 17th and 18th centuries, and then some Calculus.
+  Our reading this week is on geometry in the 17th and 18th centuries, and then some Calculus.
   (We are skipping projective geometry, a beautiful subject that drove my
   class to tears in the past; as there is a need to skip some topics, I have chosen to skip this one.
   I am sorry if you like projective geometry.)
@@ -38,7 +39,8 @@
 
   &nbsp; &nbsp;
   At the same time, and independently, geometry developed along some of the lines of the Greeks&mdash;without coordinates.
-  A notable piece of this <i>synthetic geometry</i> was the truly new field of projective geometry, which arose in part from the study of perspective in painting.
+  A notable piece of this <i>synthetic geometry</i> was the truly new field of projective geometry, which arose in part from the study of
+  perspective in painting. 
   Arguably one of the most elegant topics is the projective plane and its duality of points and lines (which we are skipping).<br>
 
   &nbsp; &nbsp;
@@ -61,7 +63,7 @@
   Chapters 7 and 9 of Stillwell. (We will skip Chapter 8 on projective geometry).
   </li>
 
- <li><font color=maroon><b>Assignment:</b> Due Monday, February 28.</font> (HW 6)
+ <li><font color=maroon><b>Assignment:</b> Due Monday, February 26.</font> (HW 6)
    Here is a <a href="../HW/HW06.pdf">.pdf</a> and a  <a href="../HW/HW06.tex">LaTeX source</a> of the assignment.<br>
   <b><font color=maroon>To hand in:</font></b>  <font color=red>We are using Gradescope for homework submission</font>.
   <ol>
@@ -69,8 +71,8 @@
         for <i>y</i><sup>2</sup>=<i>x</i><sup>2</sup>(<i>x</i>-1). 
         What is different about the third "curve" ? (Hint: consider the origin)
     </li>
-  <li>Carry out Descartes's claim by doing problems 7.5.1 and 7.5.2.  Hint, they can both be parabolas, but will one will be horizontal and
-    the other vertical.</li> 
+<!--  <li>Carry out Descartes's claim by doing problems 7.5.1 and 7.5.2.  Hint, they can both be parabolas, but will one will be horizontal and
+    the other vertical.</li> -->
 
   <li>Try your hand at some heady calculations:  Do   9.5.3 and 9.5.4  in Stillwell.</li>
 
@@ -101,7 +103,7 @@ pageTracker._trackPageview();
 } catch(err) {}</script>
 <!---------------------------------------------------------------------------->
 <!-- hhmts start Last modified: Fri Feb 21 19:51:52 CST 2020--> <!-- hhmts end -->
-<p>Last modified: Sat Feb 12 14:08:56 CST 2022 by sottile</p>
+<p>Last modified: Sat Feb 17 16:55:02 CST 2024 by sottile</p>
 
 </body> </html>
 
