--- a/teaching/24.1/629.html
+++ b/teaching/24.1/629.html
@@ -27,8 +27,8 @@ Information for
   <a href="weeks/W10.html">Week 10</a>  &nbsp;
   <a href="weeks/W09.html">Week 9</a>  &nbsp;
   <a href="weeks/W08.html">Week 8</a>  &nbsp;
-  <a href="weeks/W07.html">Week 7</a>  &nbsp;
-  <a href="weeks/W06.html">Week 6</a>  &nbsp;   -->   
+  <a href="weeks/W07.html">Week 7</a>  &nbsp;  -->
+  <a href="weeks/W06.html">Week 6</a>  &nbsp;     
   <a href="weeks/W05.html">Week 5</a>  &nbsp;
   <a href="weeks/W04.html">Week 4</a>  &nbsp;
   <a href="weeks/W03.html">Week 3</a>  &nbsp;
@@ -41,10 +41,10 @@ Information for
 <!--------------------------------------------------------->
 <!--------------------------------------------------------->
  <HR>
-  Information about your <a href="Term_Paper.html">Term Paper</a>.<br>
+ Information about your <a href="Term_Paper.html">Term Paper</a>.<br>
+ Information about your <a href="ReflectionsOnHistoryOfMathematics.html">reflections on the history of mathematics</a><br>
  <!--    Information for building your <a href="Hyperbolic_Soccerballs.html">Hyperbolic soccer ball</a>.
     <a href="triangle.gif">View</a> your triangle data.<br>
-   Information about your <a href="Second_paper.html">Second Paper </a>.<br>
   You will need to both email a .pdf to me at <TT><a href="mailto:sottile@tamu.edu">sottile@tamu.edu</a></TT>,
   and submit it to turnitin.com.<br>
   Here is the information for our class:<br>
@@ -273,7 +273,7 @@ I have also been greatly helped by Professor Emeritus Fulling and Professor Emer
 
 <!---------------------------------------------------------------------------------------------------->
 <!-- hhmts start Last modified: Sun Apr 19 09:41:25 CDT 2020--> <!-- hhmts end -->
-<p>Last modified: Sat Feb 10 18:52:58 GMT 2024 by sottile</p>
+<p>Last modified: Sat Feb 17 16:14:32 CST 2024 by sottile</p>
 <!---------------------------------------------------------------------------------------------------->
 </body> </html>
 
