--- a/conferences/TAGS24/index.html
+++ b/conferences/TAGS24/index.html
@@ -90,12 +90,14 @@ early-career participants. Request this with your registration. <br>
 <!----------------------------------------------------------------------------------------------------->
 
 
+<b>Conference Program</b>
+   &nbsp; &nbsp;  &nbsp; &nbsp; <a href="abstracts.html"><b>Abstracts</b></a><br>
 
-<b>Schedule:  </b>
+
 While the precise schedule has not yet been determined, the following is known:<br>
 The meeting starts on April 5 after the Second Maxson Lecture, which will be delivered by David Eisenbud from 4&ndash;5 PM.<br>
-There will be one or two talks, and a catered dinner that evening.<br>
-On Saturday, there will be several lectures, a poster session, and a conference dinner, <br>
+There will be one talk and a catered dinner that evening.<br>
+On Saturday, there will be four lectures, a poster session, and a conference dinner, <br>
 and the conference will continue through early afternoon on Sunday, likely finishing by 1 PM.
 
 <!---------------------------------------------------------------------------------------------------->
