--- a/talks.html
+++ b/talks.html
@@ -117,17 +117,31 @@
  <B><FONT SIZE=+1 color=brown>Upcoming Talks</FONT></B>
  <ul>
 
- </li>
-   <!---------------------------------------------------------------------------------------->
-     <FONT COLOR="AA00FF"><I>TBA</I></font>, <!-- quantum Murnaghan-Nakayama -->
-     Berleley Combinatorics Seminar, 17 April 2024.
   <!---------------------------------------------------------------------------------------->
   <li>
+     <FONT COLOR="AA00FF"><I>TBA</I></font>, <!-- quantum Murnaghan-Nakayama -->
+     Berleley Combinatorics Seminar, 17 April 2024.
+ </li>
+   <!---------------------------------------------------------------------------------------->
    <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry</I></font>,
     Invited talk, <a href="https://sites.google.com/view/golden-section-2024/home">MAA Golden Section meeting</a>, University of
     California, Santa Cruz, 24 February 2024.
+    <a href="talks/24/Golden.txt">Abstract</a>. <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
+  </li>
+  <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Welschinger Signs and the Wronskii map</I></font>
+    Geometry Seminar, Texas A&amp;M 19 February 2024.
+      <a href="talks/24/WWSigns.txt">abstract</a>
+ </li>
+   <!---------------------------------------------------------------------------------------->
+   <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry</I></font>,
+    Colloquium, Cardiff University, 13 February 2024.
     <a href="talks/24/Golden.txt">Abstract</a>. <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
   </li>
   <!---------------------------------------------------------------------------------------->
@@ -560,7 +574,7 @@
 
 <hr>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Sun Feb 11 07:07:30 GMT 2024 by sottile</p>  
+<p>Last modified: Sun Feb 18 10:25:47 CST 2024 by sottile</p>  
 <!---------------------------------------------------------------------------->
 </body> </html>
 
