--- a/teaching/24.1/ReflectionsOnHistoryOfMathematics.html
+++ b/teaching/24.1/ReflectionsOnHistoryOfMathematics.html
@@ -48,12 +48,18 @@ Please make your paper double-spaced (actually 1.3 or 1.5 will do), also 12 pt t
 </UL>
 
   This is the first time I have assigned such a reflective writing exercise; this is a bit of an experiment.
-  Feel free to discuss this on Piazza.
+  Feel free to discuss this on Piazza.<br>
+  
+
+  I am open to ideas from the class; this is an experimental assignment.
+  I just want something that is historical and much less work than the term paper.
+
+  
 <hr>
 <address></address>
 <!---------------------------------------------------------------------------->
 <!-- hhmts start Last modified: Sun Apr 19 09:41:25 CDT 2020--> <!-- hhmts end -->
-<p>Last modified: Sat Feb 17 16:35:28 CST 2024 by sottile</p>
+<p>Last modified: Sun Feb 18 12:46:58 CST 2024 by sottile</p>
 <!---------------------------------------------------------------------------->
 
 </body> </html>
