--- a/conferences/TAGS24/abstracts.html
+++ b/conferences/TAGS24/abstracts.html
@@ -66,13 +66,20 @@
   <!---------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------->
   <tr>
-    <td><font size=+1></font></td><td>&nbsp;</td>
-    <td><font size=+1 color=Purple colspan=2></font></td>
+    <td><font size=+1> Juanita Duque-Rosero</font></td><td>&nbsp;</td>
+    <td><font size=+1 color=Purple colspan=2> Local heights on hyperelliptic curves for quadratic Chabauty</font></td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
   <tr>
     <td colspan=2>  </td><td width=800 colspan=3>
-
+The method of quadratic Chabauty is a powerful tool to
+determine the set of rational points on curves.  A key input for this
+method is the values of local height functions.  In this talk, we will
+discuss an algorithm to compute these local heights at odd primes <i>v</i>
+not equal to <i>p</i> for hyperelliptic curves.  We will also explore
+examples of how this work extends the reach of quadratic Chabauty to
+curves previously deemed inaccessible.  This is joint work with
+Alexander Betts, Sachi Hashimoto, and Pim Spelier.
 
     <br> <br>
     </td>
