--- a/teaching/24.1/ReflectionsOnHistoryOfMathematics.html
+++ b/teaching/24.1/ReflectionsOnHistoryOfMathematics.html
@@ -35,13 +35,15 @@ Please make your paper double-spaced (actually 1.3 or 1.5 will do), also 12 pt t
   The purpose of this short paper is to have you reflect on that experience; what you learned, what was what you expected, what was
  unexpected, how did this relate to your previous mathematics experience.<br>
 
-  Here are some prompts that may help you begin to think about this assignment, you might try to address these, especially the third.
+  Here are some prompts that may help you begin to think about this assignment, you might try to address these, especially the last.
   
   <UL>
     
   <li>What was something you learned that surprised you.</li>
 
   <li>What was something that was challenging to you.</li>
+
+  <li>What was something that inspired  you.</li>
 
   <li>What was something that <i>either</i> may be used to enrich your teaching (for those who are or have been teachers),
   <i>or</i> that changed or deepened your understanding of mathematics.</li>
