--- a/teaching/24.1/weeks/W05.html
+++ b/teaching/24.1/weeks/W05.html
@@ -101,7 +101,7 @@
   <li><font color=maroon><b>Assignment:</b> Due Monday, February 19.</font> (HW 5)<br>
     Here is a <a href="../HW/HW05.pdf">.pdf</a> and a  <a href="../HW/HW05.tex">LaTeX source</a> of the assignment.
     Here is an image file <a href="../HW/TwoEllipses.pdf">TwoEllipses.pdf</a>, and 
-   the a <a href="../HW/Group05.pdf">.pdf</a> and a  <a href="../HW/Group05.tex">LaTeX source</a> of the group assignment..<br>
+   the a <a href="../HW/Group05.pdf">.pdf</a> and a  <a href="../HW/Group05.tex">LaTeX source</a> of the group assignment.<br>
   <b><font color=maroon>To hand in:</font></b>  <font color=red>We are using Gradescope for homework submission</font>.
   <ol>
     <li>Exercises 6.2.1, 6.2.2, and 6.2.3 from Stillwell.
