--- a/teaching/24.1/weeks/W07.html
+++ b/teaching/24.1/weeks/W07.html
@@ -19,15 +19,34 @@
 <ul>
   <li><font color=maroon><B>Opening Remarks:</b></font>
   
-    &nbsp; &nbsp; Do think about your <a href="../ReflectionsOnHistoryOfMathematics.html">Reflections on the History of Matematics paper</a>.
+    &nbsp; &nbsp; Do think about your
+    <a href="../ReflectionsOnHistoryOfMathematics.html">Reflections on the History of Matematics paper</a>.
     Actually, do more than merely think this through, but start your planning, as the deadline will creep up on you.
   <br>
 
    &nbsp; &nbsp; Our readings this week concentrate on the Calculus, continuing from last week.
-  Chapter 10 in Stillwell's book covers many of the topics that are taught in the Calculus, as well as quite a lot about formulas involving
-  infinite processes, including infinite sums and infinite products.
-  There is also an historical perspective on the Calculus, which you see starts before Newton, and continues until the 18th century, which we will 
-  eventually get to.
+  Chapter 10 in Stillwell's book covers many of the topics that are taught in the Calculus, as well as quite a lot about
+  formulas involving infinite processes, including infinite sums and infinite products.
+  Hopefully, you all recall how to derive the formula for the sum of a geometric series (both finite and infinite)&ndash;it
+  is good to recall that before reading much of the chapter.  (You can ask for help on Piazza.)
+  The top of page 186 (my version, but in Section 10.2 on power series), where Stilllwell talks about the definitions of
+  logarithm, arcsin, and arctan in terms of integrals, is important.
+  Once logarithm and the other functions are defined, one may consider their inverse functions, the exponential, sine (and
+  cosine) and tangent.
+  Furthermore, identities of the original integral in which the limits are transformed lead to famous formulas such as
+  <i>e<sup>a+b</sup></i> =   <i>e<sup>a</sup></i><i>e<sup>b</sup></i>, and the angle addition formulas for sine and cosine
+  and tangent.<br>
+
+  Section 10.4 contains examples where audaciously false (or unsubstantiated/unsubstantiatable) resoning leads to correctr
+  results.
+  The Numberphile video below (and execrise 6 on the homework) explores a modern version of that with a twist.<br>
+
+  Notice the role of partial fractions in the formula for Fibonacci numbers, which is a bit different from how generating
+  functions for recursive sequences are often used to get formulas (this is a common topic in combinatorics classes, which
+  I sometimes teach).<br>
+  
+  There is also an historical perspective on the Calculus, which you see starts before Newton, and continues until the 18th
+  century, which we will  eventually get to.
 <!--  A less scholarly, but more entertaining perspective on some figures from this period is provided by our friend Bell.-->
   For those of us who teach or will teach calculus, this additional material should be helpful in giving us, if not our students, some perspective on
   the material and the times of its development.  
@@ -52,25 +71,32 @@
        <!-- I will walk you through a correct derivation of this later.--></li>
 
     <li>Look up some sources about logarithms.  What were they used for?  Who invented them? <br>
-        Up until the 1970s logarithms were commonly used as a shortcut to multiplication, because the logarithm turns multiplication (hard)
-        into addition (easy).  (For those who have had modern algebra, this is because the logarithm function is a group isomorphism from the
+        Up until the 1970s logarithms were commonly used as a shortcut to multiplication, because the logarithm turns
+        multiplication (hard) 
+        into addition (easy).  (For those who have had modern algebra, this is because the logarithm function is a group
+        isomorphism from the 
         multiplicative group of the positive real numbers to the additive group of the real numbers&mdash;This is a consequence of the
         formula that we proved about logarithms using exhaustion.)<br>
         When I was a student in high school, they had just stopped teaching logarithms as a tool for calculation.
         Perhaps more interesting is that our sensory perceptions, specifically hearing and sight, are on a logarithmic scale.
         (As are the scales for loudness and Earthquake strength.)
       You might want to think about that as you look up material and do the homework problem on the distribution of data (Benford's Law).
-      <font color=red>What ahout Faust's article?</font>
+      Here is an <a href="https://jligit.github.io/paper/benforderroramm.pdf">award-winning article about Benford's Law</a>.
     </li>
 
    </ul>
   </li>
 
   <li><font color=maroon><b>Assignment:</b></font> Due Monday, March 4.  (HW 07)<br>
-    <a font color=red>Do Benford's Law as a group assignment</font>
    Here is a <a href="../HW/HW07.pdf">.pdf</a> and a  <a href="../HW/HW07.tex">LaTeX source</a> of the assignment.<br>
+    The group assignment is a fun project involving Benford's Law.
+    Here is a <a href="../HW/Group07.pdf">.pdf</a> and a  <a href="../HW/Group07.tex">LaTeX source</a> of the group
+    assignment.
+    You can find a .html version of it  <a href="../logarithm.html">here</a>, and it has links to a .pdf for doodling on.
+ <br>
     You may also want the image files <a href="../HW/TenScale.pdf">TenScale.pdf</a>,
-    <a href="../HW/NormalScale.pdf">NormalScale.pdf</a>, and  <a href="../HW/LogScale.pdf ">LogScale.pdf</a>. <br>
+    <a href="../HW/NormalScale.pdf">NormalScale.pdf</a>, and
+    <a href="../HW/LogScale.pdf ">LogScale.pdf</a>. <br>
     <br>
     
   I will have a shorter assignments the next two weeks as several people
@@ -96,9 +122,6 @@
       This should not be hard mathematically, but may cause some conceptual reorientation.
     </li>
     
-    <li>I have adapted a project from Prof.&nbsp;Fulling about Benford's law and the
-      <a href="../../20.1/629/logarithm.html">logarithmic scale</a>.
-        Please do the exercise on that page.
     </li>
   </ol>
  </li>
